Fix layout issues in mapper filter fields.

--- a/voicesofyouth/user/static/css/user/users_list.scss
+++ b/voicesofyouth/user/static/css/user/users_list.scss
@@ -53,7 +53,7 @@
                 }
             }
             th {
-                div {
+                div:first-child {
                     display: flex;
                     justify-content: flex-end;
                 }
